updated fonts, fixed spacing. Last thing to do, add responsive design

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans&display=swap');
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-}
+  font-family: 'PT Sans', sans-serif;}
 
 h1 {
   font-size: 60px;
